src/main/java/com/example/javista/dto/request/rejectionReason/RejectionReasonPatchRequest.java
package com.example.javista.dto.request.rejectionReason;

import com.fasterxml.jackson.annotation.JsonInclude;

import lombok.*;
import lombok.experimental.FieldDefaults;

@Data
@Builder
@NoArgsConstructor
@AllArgsConstructor
@FieldDefaults(level = AccessLevel.PRIVATE)
@JsonInclude(JsonInclude.Include.NON_NULL)
public class RejectionReasonPatchRequest {
    String content;

    Integer reportId;
}
